First commited as before_59012_rev1